# eris

./: README.md  eris.py  pyproject.toml  thalia.py
example-apis/java-stdlib/json-docs/: java.lang.Boolean.json  java.lang.Byte.json  java.lang.Character.json  java.lang.Cloneable.json  java.lang.Double.json  java.lang.Float.json  java.lang.Integer.json  java.lang.Long.json  java.lang.Short.json  java.lang.StringBuffer.json  java.nio.channels.spi.AbstractSelectableChannel.json  java.util.Spliterator.OfPrimitive.json  java.util.concurrent.CompletableFuture.json  java.util.concurrent.ExecutorCompletionService.json  java.util.concurrent.ThreadPoolExecutor.AbortPolicy.json  java.util.concurrent.ThreadPoolExecutor.DiscardPolicy.json  (+3 more)
src/: args.py  config.py  utils.py
src/compilers/: __init__.py  base.py  groovy.py  java.py  kotlin.py  scala.py
src/enumerators/: __init__.py  accessibility_error.py  analyses.py  error.py  final_var_error.py  flow_type_error.py  type_abstractions.py  type_error.py  updater.py  utils.py
src/generators/: enumerator_mixin.py  generator.py
src/ir/: ast.py  builtins.py  groovy_types.py  java_types.py  kotlin_types.py  scala_types.py  type_utils.py  types.py  visitors.py
src/modules/: logging.py  processor.py
src/translators/: groovy.py  java.py  kotlin.py  scala.py  utils.py
tests/: test_api_graph.py  test_api_graph_subtyping.py  test_api_graph_utils.py  test_enumerator_accessibility.py  test_enumerator_final_var.py  test_enumerator_utils.py  test_enumerators.py  test_parse_type.py  test_type_erasure.py  test_type_utils.py  test_types.py
(+11 files in other folders)
