[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eris"
version = "1.0"
authors = [
    {name = "Thodoris Sotiropoulos", email = "theosotr@windowslive.com"}
]
description = "Enumerating Ill-Typed Programs for Testing Type Analyzers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: GPL v3.0 License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "networkx",
]

[tool.setuptools]
packages = [
  "src",
  "src.analysis",
  "src.compilers",
  "src.enumerators",
  "src.generators",
  "src.generators.api",
  "src.ir",
  "src.modules",
  "src.transformations",
  "src.translators",
]
py-modules = ["eris"]
include-package-data = true

[tool.setuptools.package-data]
src = ["resources/*"]

[project.scripts]
eris = "eris:main"

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
    "tests",
]
